<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Liberator</string>
    <string name="action_settings">Settings</string>
    <string name="printer_device_name">DPU-S445</string>
    <string name="printer_device_model">281</string>
    <string name="action_db_extract">DB Extract</string>
    <string name="feature_name_login">Login</string>
    <string name="login_config_intro">Please check that the date and time are correct. Click on the date or time to reset.</string>
    <string name="login_office_depot_prompt">Select depot</string>
    <string name="login_confirm">Confirm</string>
    <string name="login_hint_ceo_id">Enter ID Here</string>
    <string name="login_hint_ceo_password">Enter password</string>
    <string name="done_label">Done</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="deleted_key">%1$s deleted</string>
    <string name="time_placeholder">--</string>
    <string name="time_separator">:</string>
    <string name="radial_numbers_typeface">sans-serif</string>
    <string name="sans_serif">sans-serif</string>
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string name="recurrence_month_pattern_by_day">on the same day each month</string>
    <string name="acessibility_recurrence_choose_end_date_description">change end date</string>
    <string name="save_label">Done</string>
    <string name="recurrence_end_continously">Forever</string>
    <string-array name="other_info_items">
        <item>Diplomatic Vehicle</item>
        <item>Broken Down</item>
        <item>Foreign Registration</item>
        <item>Loading Evidence</item>
    </string-array>
    <string-array name="max_time">
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>1.5 Hours</item>
        <item>2 Hours</item>
    </string-array>
    <string name="max_return_prompt">Select Min Return Time</string>
    <string name="max_time_prompt">Select Max Time</string>
    <string name="permit_type_prompt">Select Permit Type</string>
    <string name="pcn_field">PCN No:</string>
    <string name="pcn_date_field">Notice Service Date:</string>
    <string name="pcn_registration_field">Vehicle Registration Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_print_test">PrintTestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pcnlist">PCNListActivity</string>
    <string name="app_label">Clock</string>
    <string name="alarm_list_title">Alarms</string>
    <string name="add_alarm">Add alarm</string>
    <string name="alarm_timeline_title_text">NEXT ALARMS</string>
    <string name="menu_desk_clock">Desk clock</string>
    <string name="menu_edit_alarm">Edit alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="enable_alarm">Turn alarm on</string>
    <string name="disable_alarm">Turn alarm off</string>
    <string name="delete_alarm_confirm">Delete this alarm?</string>
    <string name="show_clock">Show clock</string>
    <string name="hide_clock">Hide clock</string>
    <string name="label">Label</string>
    <string name="default_label">Alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alert">Alarm Ringtone</string>
    <string name="ringtone">Ringtone</string>
    <string name="time">Time</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_dismiss_now_text">Dismiss Now</string>
    <string name="alarm_missed_title">Missed alarm</string>
    <string name="alarm_missed_text"><xliff:g id="alarm_time">%s</xliff:g> - <xliff:g id="alarm_label">%s</xliff:g></string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <plurals name="alarm_alert_snooze_set">

        
        <item quantity="one">Snoozing for 1 minute.</item>
        
        <item quantity="other">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</item>
    </plurals>
    <string name="alarm_alert_snooze_until">Snoozing until <xliff:g id="time">%s</xliff:g></string>
    <string name="alarm_alert_predismiss_title">Upcoming alarm</string>
    <string name="missed_alarm_has_been_deleted">Your missed alarm has been deleted</string>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="every_day">Every day</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">Choose a clock</string>
    <string name="analog_gadget">Analog clock</string>
    <string name="help">help</string>
    <string name="snooze_duration_title">Snooze length</string>
    <plurals name="snooze_duration">

        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="snooze_picker_label">

        
        <item quantity="one">minute</item>
        
        <item quantity="other">minutes</item>
    </plurals>
    <string name="auto_silence_title">Silence after</string>
    <string name="auto_silence_summary"><xliff:g id="minutes">%d</xliff:g> minutes</string>
    <string name="auto_silence_never">Never</string>
    <string name="done">Done</string>
    <string name="revert">Revert</string>
    <string name="delete">Delete</string>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="silent_alarm_summary">Silent</string>
    <string name="alarm_notify_text">Snooze or dismiss alarm.</string>
    <string name="alarm_notify_snooze_label"><xliff:g id="label">%s</xliff:g> (snoozed)</string>
    <string name="alarm_notify_snooze_text">Alarm set for <xliff:g id="time">%s</xliff:g>. Touch to cancel.</string>
    <string name="volume_button_setting_title">Volume buttons</string>
    <string name="volume_button_dialog_title">Button effect</string>
    <string name="default_ringtone_setting_title">Set default ringtone</string>
    <string name="alarm_button_description">Alarms</string>
    <string name="gallery_button_description">Gallery</string>
    <string name="music_button_description">Music</string>
    <string name="nightmode_button_description">Dim</string>
    <string name="home_button_description">Launcher</string>
    <string name="desk_clock_button_description">Clock display</string>
    <string name="label_description">Label</string>
    <string name="ringtone_description">Ringtone</string>
    <string name="battery_charging_level"><xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
    <string name="weather_fetch_failure">Weather information isn\'t available right now.</string>
    <string name="alarm_klaxon_service_desc">Sound playback service for alarms set in Clock.</string>
    <string name="loading_ringtone">Loading ringtone\u2026</string>
    <string name="timer_ring_service_desc">Sound playback service for timers set in Clock.</string>
    <string name="control_set_alarm">Set alarm</string>
    <string name="control_set_alarm_with_existing"><xliff:g id="time">%s</xliff:g></string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_clock">Clock</string>
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="button_alarms">Alarms</string>
    <string name="button_cities">Cities</string>
    <string name="button_menu">More options</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_night_mode">Night mode</string>
    <string name="menu_item_sort_by_gmt_offset">Sort by time</string>
    <string name="menu_item_sort_by_name">Sort by name</string>
    <string name="selected_cities_label">Selected Cities</string>
    <string name="sw_resume_button">Resume</string>
    <string name="sw_start_button">Start</string>
    <string name="sw_stop_button">Stop</string>
    <string name="sw_lap_button">Lap</string>
    <string name="sw_reset_button">Reset</string>
    <string name="sw_share_button">Share</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="hours_label_description">hours</string>
    <string name="minutes_label_description">minutes</string>
    <string name="seconds_label_description">seconds</string>
    <string name="zero">0</string>
    <string name="sw_share_main">My time is <xliff:g id="time">%s</xliff:g></string>
    <string name="sw_share_laps">Lap times:</string>
    <string name="sw_notification_lap_number">Lap <xliff:g id="number">%d</xliff:g></string>
    <plurals name="Nhours_description">

        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="Nminutes_description">

        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="Nseconds_description">

        
        <item quantity="one">1 second</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%d</xliff:g> seconds</item>
    </plurals>
    <string name="timer_add_timer">Add Timer</string>
    <string name="timer_start">Start</string>
    <string name="timer_delete">Delete</string>
    <string name="timer_plus_one">Add 1 Minute</string>
    <string name="timer_plus_1_min">Add 1 min</string>
    <string name="timer_stop">Stop</string>
    <string name="timer_done">Done</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_cancel">Cancel</string>
    <string name="timer_times_up">Time\'s up</string>
    <string name="timer_notification_label">Timer</string>
    <plurals name="timers_num">

        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%d</xliff:g> timers</item>
    </plurals>
    <string name="home_label">Home</string>
    <string name="cities_activity_title">Cities</string>
    <string name="clock_settings">CLOCK</string>
    <string name="clock_style">Style</string>
    <string name="automatic_home_clock">Automatic home clock</string>
    <string name="automatic_home_clock_summary">While traveling in an area where the time is different, add a clock for home</string>
    <string name="home_time_zone">Home time zone</string>
    <string name="home_time_zone_title">Home time zone</string>
    <string name="time_picker_cancel">Cancel</string>
    <string name="time_picker_set">OK</string>
    <string name="time_picker_time_seperator">:</string>
    <string name="time_picker_ampm_label">--</string>
    <string name="time_picker_00_label">:00</string>
    <string name="pdHeader">P &amp; D Expiry Time:</string>
    <string name="pdButton">P &amp; D Ticket</string>
    <string name="anpr">ANPR</string>
</resources>