<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
    <!-- Extended by Hanson Aboagye 04/2014 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/time_picker_dialog"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pdHeader"
        android:id="@+id/txtTitle"
        android:textSize="22dp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <FrameLayout
        android:id="@+id/time_display_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >
        <include
            layout="@layout/radial_time_header_label"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:layout_gravity="center" />
    </FrameLayout>
<!-- -->
    <com.farthestgate.android.ui.components.radialpickers.RadialPickerLayout
        android:id="@+id/time_picker"
        android:layout_height="@dimen/picker_dimen"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:background="@color/circle_background"
        android:focusable="true"
        android:focusableInTouchMode="true" />
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/line_background" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtPDSerial"
        android:layout_gravity="center_horizontal"
        android:hint=""
        android:layout_margin="2dp"
        android:inputType="textCapCharacters|textCapWords" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCancelPD"
            android:background="@drawable/done_background_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/pdButton"
            android:textSize="@dimen/done_label_size"
            android:layout_weight="0.5"
            android:textColor="@color/done_text_color" />
        <Button
            android:id="@+id/done_button"
            android:background="@drawable/done_background_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/done_label"
            android:layout_weight="0.5"
            android:textSize="@dimen/done_label_size"
            android:textColor="@color/done_text_color" />
    </LinearLayout>

</LinearLayout>
